--- a/scss/_approach.scss
+++ b/scss/_approach.scss
@@ -1,7 +1,6 @@
 .approach-section {
     .approach-content {
         display: grid;
-        grid-template-columns: repeat(2, 1fr);
         position: relative;
 
         h2 {
@@ -15,20 +14,20 @@
 
         .strategy-content {
             background-color: $red;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-around;
+            display: grid;
+            grid-template-columns: repeat(1, 1fr);
+            grid-column: 3 / span 2;
             gap: 2rem;
-            position: relative;
             top: 0;
             margin-top: -13rem;
             padding: 8rem 16rem;
+            width: 100%;
+            z-index: 4;
 
             .strategy-number {
                 position: absolute;
                 left: -4rem;
                 top: 0%;
-                transform: translateY(-50%);
                 font-size: 5rem; // Large background number
                 font-weight: 900;
                 color: rgba(200, 200, 200, 0.2);
